--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,5 @@
-﻿
-/assets
 /src/.htaccess
 /src/configuration.php
-/src/libraries/wurfl
-/src/nbproject
-/src_
-/src/components/com_jshopping/files/pdf_orders
 /.idea
+/src/cache/*
+/src/tmp/*
