--- a/nginx.cfg
+++ b/nginx.cfg
@@ -1,30 +1,38 @@
 server {
-        listen   80;
-        root /home/andrey/www/yomayka/src/src;
-        index index.php index.html index.htm;
-
+        listen 80;
         server_name yomayka.loc;
+        server_name_in_redirect off;
 
+    	access_log  /home/andrey/www/yomayka/access.log;
+	    error_log  /home/andrey/www/yomayka/error.log notice;
+
+        root /home/andrey/www/yomayka/src/src;
+        index index.php index.html index.htm default.html default.htm;
+        # Support Clean (aka Search Engine Friendly) URLs
         location / {
-                try_files $uri $uri/ /index.html;
+                try_files $uri $uri/ /index.php?$args;
         }
 
-#        error_page 404 /404.html;
+        # deny running scripts inside writable directories
+        location ~* /(images|cache|media|logs|tmp)/.*\.(php|pl|py|jsp|asp|sh|cgi)$ {
+                return 403;
+                error_page 403 /403_error.html;
+        }
 
-#        error_page 500 502 503 504 /50x.html;
-#        location = /50x.html {
-#              root /usr/share/nginx/www;
-#        }
-
-        # pass the PHP scripts to FastCGI server listening on /var/run/php5-fpm.sock
         location ~ \.php$ {
-#                try_files $uri =404;
-                fastcgi_pass unix:/var/run/php5-fpm.sock;
-                fastcgi_index index.php;
-                fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-                include fastcgi_params;
+            fastcgi_pass unix:/var/run/php5-fpm.sock;
+            fastcgi_index index.php;
+            include fastcgi_params;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+           # include /etc/nginx/fastcgi.conf;
         }
 
-	access_log  /home/andrey/www/yomayka/access.log;
-	error_log  /home/andrey/www/yomayka/error.log notice;
+        # caching of files
+        location ~* \.(ico|pdf|flv)$ {
+                expires 1y;
+        }
+
+        location ~* \.(js|css|png|jpg|jpeg|gif|swf|xml|txt)$ {
+                expires 14d;
+        }
 }
